[gd_scene load_steps=11 format=3 uid="uid://j8258bk6mx56"]

[ext_resource type="Script" path="res://title/title.gd" id="1_vqh8r"]
[ext_resource type="Texture2D" uid="uid://cv567saolfxqb" path="res://level/Game_Background.png" id="2_h7wua"]
[ext_resource type="Texture2D" uid="uid://cnv0aquctam6s" path="res://title/UI Graphics/Play_Button.png" id="3_rm4h8"]
[ext_resource type="Texture2D" uid="uid://dl6jlsj36boij" path="res://title/UI Graphics/How_to_Play.png" id="4_k66g6"]
[ext_resource type="Texture2D" uid="uid://5mgs64fkvbxm" path="res://title/UI Graphics/Credits.png" id="5_vgjcm"]
[ext_resource type="Texture2D" uid="uid://2etppx2kdk52" path="res://title/UI Graphics/GlobalGameJam2025.png" id="6_wu7q3"]
[ext_resource type="Texture2D" uid="uid://u8jd63glatq7" path="res://title/UI Graphics/Ship_the_Fish_PlayButton.png" id="7_r4c05"]
[ext_resource type="Texture2D" uid="uid://bjoayu5iy0tix" path="res://title/UI Graphics/Tutorial_Box.png" id="8_gc7xi"]
[ext_resource type="Texture2D" uid="uid://c5r3a7n5ifnl3" path="res://title/UI Graphics/Credits_Box.png" id="9_1t6nh"]
[ext_resource type="Texture2D" uid="uid://bvsma2kct1ja3" path="res://title/UI Graphics/Back_Arrow.png" id="9_emc3s"]

[node name="Title" type="Node2D"]
script = ExtResource("1_vqh8r")

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
z_as_relative = false
texture = ExtResource("2_h7wua")
centered = false

[node name="PlayButton" type="Button" parent="."]
offset_left = 636.0
offset_top = 314.0
offset_right = 1285.0
offset_bottom = 614.0
pivot_offset = Vector2(324, 150)
focus_mode = 0
icon = ExtResource("3_rm4h8")
flat = true

[node name="TutorialButton" type="Button" parent="."]
offset_left = 350.0
offset_top = 600.0
offset_right = 888.0
offset_bottom = 833.0
pivot_offset = Vector2(269, 116)
focus_mode = 0
icon = ExtResource("4_k66g6")
flat = true

[node name="CreditsButton" type="Button" parent="."]
offset_left = 1160.0
offset_top = 600.0
offset_right = 1698.0
offset_bottom = 833.0
pivot_offset = Vector2(269, 116)
focus_mode = 0
icon = ExtResource("5_vgjcm")
flat = true

[node name="GGJ" type="Sprite2D" parent="."]
position = Vector2(273, 1011)
texture = ExtResource("6_wu7q3")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(960, 145)
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_r4c05")

[node name="Tutorial" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("8_gc7xi")
centered = false

[node name="Credits" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("9_1t6nh")
centered = false

[node name="BackButton" type="Button" parent="."]
offset_left = 1603.0
offset_top = 13.0
offset_right = 1835.0
offset_bottom = 246.0
pivot_offset = Vector2(116, 116)
focus_mode = 0
icon = ExtResource("9_emc3s")
flat = true

[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="TutorialButton" to="." method="_on_tutorial_button_mouse_entered"]
[connection signal="mouse_exited" from="TutorialButton" to="." method="_on_tutorial_button_mouse_exited"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="mouse_entered" from="CreditsButton" to="." method="_on_credits_button_mouse_entered"]
[connection signal="mouse_exited" from="CreditsButton" to="." method="_on_credits_button_mouse_exited"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="BackButton" to="." method="_on_back_button_mouse_exited"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
